[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/robisplash_bg.png" type="Texture" id=1]
[ext_resource path="res://Loading.gd" type="Script" id=2]

[sub_resource type="Animation" id=1]
resource_name = "demo2"
length = 6.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3, 6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.00784314, 0.00784314, 0.00784314, 1 ), Color( 0.996078, 0.992157, 0.992157, 1 ), Color( 0.0392157, 0.0392157, 0.0392157, 1 ) ]
}

[node name="Loading" type="Node2D"]
script = ExtResource( 2 )

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color( 0.996078, 0.992157, 0.992157, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="TextureRect"]
anims/demo2 = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 6.0
autostart = true

[node name="next" type="Button" parent="."]
margin_left = 419.0
margin_top = 388.0
margin_right = 499.0
margin_bottom = 421.0
text = "Next"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="back" type="Button" parent="."]
margin_left = 313.0
margin_top = 389.0
margin_right = 393.0
margin_bottom = 422.0
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="next" to="." method="_on_next_pressed"]
[connection signal="pressed" from="back" to="." method="_on_back_pressed"]
